--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "router-link": "^0.0.4",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
