--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-
-    "router-link": "^0.0.4",
-
     "react-slick": "^0.29.0",
+    "router-link": "^0.0.4",
     "slick-carousel": "^1.8.1",
-
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
